--- a/Backend-Node/package.json
+++ b/Backend-Node/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "this is backend for this app developed using NODE",
   "main": "index.js",
+  "type": "module",
   "dependencies": {
     "accepts": "^1.3.8",
     "anymatch": "^3.1.3",
@@ -97,7 +98,8 @@
     "undefsafe": "^2.0.5",
     "unpipe": "^1.0.0",
     "utils-merge": "^1.0.1",
-    "vary": "^1.1.2"
+    "vary": "^1.1.2",
+    "ws": "^8.18.0"
   },
   "scripts": {
     "start": "node index.js",
